made the page markup

--- a/index.html
+++ b/index.html
@@ -5,8 +5,365 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BETVPS</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Roboto:wght@400;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
+    <header>
+        <div class="container">
+            <a class="logo"></a>
+            <nav>
+                <ul>
+                    <li><a>Купить VPS</a></li>
+                    <li><a>О продукте</a></li>
+                    <li><a>FAQ</a></li>
+                </ul>
+                <button>Тех. поддержка</button>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <section>
+            <h1>лучшее сочетание</h1>
+            <ul>
+                <li>
+                    <svg >
+                        <use ></use>
+                    </svg>
+                    <p>анонимность</p>
+                </li>
+                <li>
+                    <svg>
+                        <use></use>
+                    </svg>
+                    <p>безопасность</p>
+                </li>
+                <li>
+                    <svg>
+                        <use></use>
+                    </svg>
+                    <p>мощность</p>
+                </li>
+            </ul>
+            <p><span>VPS</span> - это виртуально созданный ПК с нужными вам конфигурациями. Это отличное решение для полной анонимности и получения необходимой мощности для решения различных задач.
+            </p>
+            <button>
+                <svg>
+                    <use></use>
+                </svg>
+                <p>Купить VPS</p>
+            </button>
+        </section>
+
+        <section>
+            <h2>Преимущества</h2>
+            <ul>
+                <li>
+                    <svg>
+                        <use></use>
+                    </svg>
+                    <h3>Скорость</h3>
+                    <p>Интернет канал без ограничений. Быстрый отклик</p>
+                </li>
+                <li>
+                    <svg>
+                        <use></use>
+                    </svg>
+                    <h3>Софт</h3>
+                    <p>Предустановлены популярные программы, в том числе и бот/сканер Betting Со</p>
+                </li>
+                <li>
+                    <svg>
+                        <use></use>
+                    </svg>
+                    <h3>Windows 10</h3>
+                    <p>На всех решениях предустановлена сборка Windows 10</p>
+                </li>
+                <li>
+                    <svg>
+                        <use></use>
+                    </svg>
+                    <h3>Оптимизация под вилки</h3>
+                    <p>Стабильная работа бота и
+                    моментальная проставка
+                    плеч в сканере</p>
+                </li>
+                <li>
+                    <svg>
+                        <use></use>
+                    </svg>
+                    <h3>Оптимальная цена</h3>
+                    <p>400грн. - 7 дней. Одно из самых лучших предложений на рынке</p>
+                </li>
+                <li>
+                    <svg>
+                        <use></use>
+                    </svg>
+                    <h3>Уникализация</h3>
+                    <p>Каждая виртуальная машина уникальна</p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>О продукте</h2>
+            <p>VPS - это виртуально созданный ПК с нужными вам конфигурациями. Это отличное решение для полной анонимности и получения необходимой мощности для решения различных задач.
+                </p>
+            <p>Изначально мы создавали VPS под свои личные нужды (использование собственного ПО), но увидев дефицит качественного сервиса VPS для профессионалов, мы решили предоставить его широкой аудитории.
+                </p>
+            <h4>Наши главные правила для всех продуктов:</h4>
+            <ul>
+                <li>
+                    <svg>
+                        <use></use>
+                    </svg>
+                    <p>Оперативная и адекватная поддержка</p>
+                </li>
+                <li>
+                    <svg>
+                        <use></use>
+                    </svg>
+                    <p>Опытные разработчики</p>
+                </li>
+                <li>
+                    <svg>
+                        <use></use>
+                    </svg>
+                    <p>Возможность сотрудничества</p>
+                </li>
+                <li>
+                    <svg>
+                        <use></use>
+                    </svg>
+                    <p>Гибкая ценовая политика</p>
+                </li>
+                <li>
+                    <svg>
+                        <use></use>
+                    </svg>
+                    <p>Безопасность и анонимность</p>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Стоимость и оплата</h2>
+            <ul>
+                <li>
+                    <h3>VPS</h3>
+                    <ul>
+                        <li>
+                            <p>RAM</p>
+                            <p>8 GB</p>
+                        </li>
+                        <li>
+                            <p>SSD Space</p>
+                            <p>30 GB</p>
+                        </li>
+                        <li>
+                            <p>CPU Cores</p>
+                            <p>2</p>
+                        </li>
+                        <li>
+                            <p>Bandwidth</p>
+                            <p>1 TB</p>
+                        </li>
+                        <li>
+                            <p>Control Panel</p>
+                            <p>Full</p>
+                        </li>
+                    </ul>
+                    <p>7 дней</p>
+                    <p>400 грн</p>
+                    <button></button>
+                </li>
+                <li>
+                    <h3>VPS</h3>
+                    <ul>
+                        <li>
+                            <p>RAM</p>
+                            <p>16 GB</p>
+                        </li>
+                        <li>
+                            <p>SSD Space</p>
+                            <p>70 GB</p>
+                        </li>
+                        <li>
+                            <p>CPU Cores</p>
+                            <p>2</p>
+                        </li>
+                        <li>
+                            <p>Bandwidth</p>
+                            <p>1 TB</p>
+                        </li>
+                        <li>
+                            <p>Control Panel</p>
+                            <p>Full</p>
+                        </li>
+                    </ul>
+                    <p>14 дней</p>
+                    <p>770 грн</p>
+                    <button></button>
+                </li>
+                <li>
+                    <h3>VPS</h3>
+                    <ul>
+                        <li>
+                            <p>RAM</p>
+                            <p>24 GB</p>
+                        </li>
+                        <li>
+                            <p>SSD Space</p>
+                            <p>100 GB</p>
+                        </li>
+                        <li>
+                            <p>CPU Cores</p>
+                            <p>2</p>
+                        </li>
+                        <li>
+                            <p>Bandwidth</p>
+                            <p>1 TB</p>
+                        </li>
+                        <li>
+                            <p>Control Panel</p>
+                            <p>Full</p>
+                        </li>
+                    </ul>
+                    <p>30 дней</p>
+                    <p>2700 грн</p>
+                    <button>
+                        <svg>
+                            <use></use>
+                        </svg>
+                        <p>Заказать</p>
+                    </button>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Как мне выбрать сервер?</h2>
+            <p>Зарегистрироваться на сайте и оплатить виртуальный компьютер.</p>
+            <p>Далее подключиться к виртуальному компьютеру, то есть:</p>
+            <ol>
+                <li>
+                    <p>На своем компьютере нажать на кнопку пуск;</p>
+                </li>
+                <li>
+                    <p>В строке поиск напечатать подключение;</p>
+                </li>
+                <li>
+                    <p>Выбрать подключение к удаленному рабочему столу;</p>
+                </li>
+                <li>
+                    <p>Напечатать айпи и порт слитно;</p>
+                </li>
+                <li>
+                    <p>Далее выбрать Administrator и пароль;</p>
+                </li>
+                <li>
+                    <p>Задать свой пароль;</p>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Общие вопросы</h2>
+            <ol>
+                <li>
+                    <h4>Какой нужен компьютер для работы с виртуальными машинами?</h4>
+                    <p>Для удаленного подключения к виртуальной машине подойдет практически любой компьютер, главное ,чтобы скорость вашего Интернета была от 5 мбит/сек.</p>
+                </li>
+                <li>
+                    <h4>Зачем мне нужны ваши виртуальные машины?</h4>
+                    <p>Большинство букмекерских контор борются с вилочниками и стараются вычислить их. При вычислении БК могут порезать лимиты, порезать линию и отправить на дополнительную верификацию для выплаты выигрыша.
+                    </p>
+                    <p>Службы безопасности БК обращают внимание на ваши действия и так же они смотрят на железо (компьютер) с которого вы заходите в БК. Например, у контор 1хбет, мелбет и мостбет службы безопасности сотрудничают друг с другом. И они могут заметить, что с одного и того же ip играет несколько аккаунтов. Это называется мультиаккаунтингом, и за это блокируют.
+                    </p>
+                </li>
+            </ol>
+        </section>
+
+        <section>
+            <h2>Остались вопросы?</h2>
+            <p>Напишите нам на наш E-mail, и мы с радостью ответим на все ваши вопросы!</p>
+            <button>
+                <svg>
+                    <use></use>
+                </svg>
+                <p>Написать</p>
+            </button>
+        </section>
+    </main>
+    <footer>
+        <a class="logo"></a>
+        <p>© Все права защищены. All Rights Reserved. 2021 BetVPS</p>
+    </footer>
+
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button class="closing-button" data-modal-close>
+                <svg class="cross" width="11" height="11">
+                    <!-- <use class="" href="./images/icons/sprite.svg#cross"></use> -->
+                </svg>
+            </button>
+            <form class="sign-form">
+                <ol>
+                    <li>
+                        <h4>Выберите способ оплаты</h4>
+                        <p>Выберите для себя наиболее удобный способ</p>
+                        <ul>
+                            <li>
+                                <svg></svg>
+                            </li>
+                            <li>
+                                <svg></svg>
+                            </li>
+                            <li>
+                                <svg></svg>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h4>Введите свой корректный E-mail</h4>
+                        <p>На Вашу почту придут данные для подключения к VPS</p>
+                        <div class="">
+                            <label class="" for="mail"></label>
+                            <input class="input-field" type="email" id="mail" />
+                            <svg class="form-icon" width="12" height="12">
+                                <!-- <use class="" href="./images/icons/sprite.svg#icon-mail"></use> -->
+                            </svg>
+                        </div>
+                    </li>
+                    <li>
+                        <h4>Дополнительно</h4>
+                        <p>Выберите количество и введите промокод, если он есть</p>
+                        <div class="">
+                            <label class="" for="mail"></label>
+                            <input class="input-field" type="email" id="mail" />
+                            <svg class="form-icon" width="12" height="12">
+                                <!-- <use class="" href="./images/icons/sprite.svg#icon-mail"></use> -->
+                            </svg>
+                        </div>
+                        <div class="">
+                            <label class="" for="mail"></label>
+                            <input class="input-field" type="email" id="mail" />
+                            <svg class="form-icon" width="12" height="12">
+                                <!-- <use class="" href="./images/icons/sprite.svg#icon-mail"></use> -->
+                            </svg>
+                        </div>
+                    </li>
+                </ol>
+                <a>Политика безопасности</a>
+                <button>Перейти к оплате</button>
+                <p>Сумма к оплате (грн):</p>
+                <p>2700</p>                                         
+            </form>
+        </div>
+    </div>
     
 </body>
 </html>
