--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
                         <use class="icon-logo" href="./images/icons/sprite.svg#icon-logo"></use>
                     </svg>
                 </a>
+                
                 <ul class="navigation-menu">
-                    <li class="nav-menu_item"><a>Купить VPS</a></li>
-                    <li class="nav-menu_item"><a>О продукте</a></li>
-                    <li class="nav-menu_item"><a>FAQ</a></li>
+                    <li class="nav-menu_item"><a href="#">Купить VPS</a></li>
+                    <li class="nav-menu_item"><a href="#">О продукте</a></li>
+                    <li class="nav-menu_item"><a href="#">FAQ</a></li>
                 </ul>
-                <button class="nav-btn">Тех. поддержка</button>
+                <button class="nav-btn button">Тех. поддержка</button>
             </nav>
         </div>
     </header>
@@ -55,7 +56,7 @@
             </ul>
             <p><span>VPS</span> - это виртуально созданный ПК с нужными вам конфигурациями. Это отличное решение для полной анонимности и получения необходимой мощности для решения различных задач.
             </p>
-            <button>
+            <button class="button">
                 <svg class="hero-btn" width="38px" height="38px">
                     <use class="hero-btn-icon" href="./images/icons/sprite.svg#icon-btn-hero"></use>
                 </svg>
@@ -63,7 +64,7 @@
             </button>
         </section>
 
-        <section class="adv">
+        <!--<section class="adv">
             <h2>Преимущества</h2>
             <ul>
                 <li>
@@ -220,7 +221,7 @@
                     </ul>
                     <p>14 дней</p>
                     <p>770 грн</p>
-                    <button class="price-btn">
+                    <button class="price-btn button">
                         <svg class="price-svg" width="25px" height="25px">
                             <use class="price-icon" href="./images/icons/sprite.svg#icon-btn-price"></use>
                         </svg>
@@ -256,7 +257,7 @@
                     </ul>
                     <p>30 дней</p>
                     <p>2700 грн</p>
-                    <button class="price-btn">
+                    <button class="price-btn button">
                         <svg class="price-svg" width="25px" height="25px">
                             <use class="price-icon" href="./images/icons/sprite.svg#icon-btn-price"></use>
                         </svg>
@@ -318,7 +319,7 @@
         <section class="feedback">
             <h2>Остались вопросы?</h2>
             <p>Напишите нам на наш E-mail, и мы с радостью ответим на все ваши вопросы!</p>
-            <button>
+            <button class=>
                 <svg class="feedback-btn" width="25px" height="19px">
                     <use class="feedback-icon" href="./images/icons/sprite.svg#icon-btn-envelope"></use>
                 </svg>
@@ -340,7 +341,7 @@
         <div class="modal">
             <button class="closing-button" data-modal-close>
                 <svg class="cross" width="11" height="11">
-                    <!-- <use class="" href="./images/icons/sprite.svg#cross"></use> -->
+                     <use class="" href="./images/icons/sprite.svg#cross"></use> 
                 </svg>
             </button>
             <form class="sign-form">
@@ -367,7 +368,7 @@
                             <label class="" for="mail"></label>
                             <input class="input-field" type="email" id="mail" />
                             <svg class="form-icon" width="12" height="12">
-                                <!-- <use class="" href="./images/icons/sprite.svg#icon-mail"></use> -->
+                                <use class="" href="./images/icons/sprite.svg#icon-mail"></use> 
                             </svg>
                         </div>
                     </li>
@@ -378,14 +379,14 @@
                             <label class="" for="mail"></label>
                             <input class="input-field" type="email" id="mail" />
                             <svg class="form-icon" width="12" height="12">
-                                <!-- <use class="" href="./images/icons/sprite.svg#icon-mail"></use> -->
+                                <use class="" href="./images/icons/sprite.svg#icon-mail"></use>
                             </svg>
                         </div>
                         <div class="">
                             <label class="" for="mail"></label>
                             <input class="input-field" type="email" id="mail" />
                             <svg class="form-icon" width="12" height="12">
-                                <!-- <use class="" href="./images/icons/sprite.svg#icon-mail"></use> -->
+                                <use class="" href="./images/icons/sprite.svg#icon-mail"></use>
                             </svg>
                         </div>
                     </li>
@@ -396,7 +397,7 @@
                 <p>2700</p>                                         
             </form>
         </div>
-    </div>
+    </div>-->
     
 </body>
 </html>
